Fixing image alignment weirdness on tag pages

--- a/src/_sass/template-tag.sass
+++ b/src/_sass/template-tag.sass
@@ -24,16 +24,19 @@
                     color: var(--base-font-color)
             img
                 margin: 5px auto
+                max-width: 80%
+                display: block
             button
                 background-color: var(--light-highlight)
                 color: var(--light-highlight-overlap)
                 margin-top: 18px
         figcaption
-            max-width: 90%
+            max-width: 75%
             color: var(--base-font-color)
             text-decoration: none
             font-size: x-small
-            margin-left: 10px
+            display: block
+            margin: 10px auto
             &:hover
                 text-decoration: none
             & > *
